# IR_expert_system_3

./: .gitignore  README.md  pyproject.toml
configs/: bands_reference.yaml  paths.colab.yaml  paths.huggingface.yaml  paths.local.yaml  train_gpu.yaml  train_mini.yaml  train_smoke.yaml
notebooks/: colab_launcher.ipynb
src/ir_pipeline/: __init__.py  __main__.py  bands.py  cli.py  config_loader.py  dataset_build.py  evaluate.py  jcamp_loader.py  labeling.py  preprocess.py  structure_resolver.py  torch_train.py  train_sklearn.py  visualize.py
tests/: test_bands.py  test_preprocess.py
