[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ir-pipeline"
version = "0.1.0"
description = "FT-IR JCAMP pipeline: preprocess, structure labels, train, visualize"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.11",
    "pandas>=2.0",
    "pyarrow>=14.0",
    "pyyaml>=6.0",
    "huggingface_hub>=0.23",
    "click>=8.1",
    "tqdm>=4.66",
    "jcamp>=1.2",
    "pubchempy>=1.0.4",
    "scikit-learn>=1.3",
    "matplotlib>=3.8",
    "rdkit>=2023.9.1",
]

[project.optional-dependencies]
torch = ["torch>=2.1"]
# GPU RandomForest (sklearn-подобный API), нужен NVIDIA CUDA (Linux/Colab): pip install -e ".[cuml]"
cuml = ["cuml-cu12>=24.8"]
dev = ["pytest>=7.4", "ruff>=0.1"]

[project.scripts]
ir-pipeline = "ir_pipeline.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
